[package]
name = "rusty-photos"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# AWS Rust SDK
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
aws-sdk-sqs = "1.62.0"
aws-sdk-dynamodb = "1.69.0"

axum = "0.6"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"